# OpenCvConcept

./: Create_virtual-environment.txt  ExtractingRGBValue.py  WorkingWithImage.py  imageRead.py
Image Processing/: ColorDetectFromTheRoad.py  ImageBlurring.py  OPENCV.docx  SVM.py  dilation.py  erode.py  grayscaling.py  histogram.py  imgaeResize.py  makeborder.py  rotating.py  scaling.py
Image Processing/Application/: MyHandGaming.py  vedioCreateWithMultipleImage.py
Image Processing/Application/HandTrackingProject/: HandTracking.py  HandTrackingModule.py  MyHandGaming.py
Image Processing/Application/VirtualDragDrop/: main.py  requirements.txt
Object_Detection_With_OpenCV/OpenCV_Object_Detection_With_Mask-rcnn/: mask_rcnn_object_detection.py
Object_Detection_With_OpenCV/OpenCV_Object_Detection_With_SSD/: label.txt  requirements.txt  ssd-object-detection.py
Object_Detection_With_OpenCV/OpenCV_Object_Detection_With_SSMD/: ssmd-object-detection.py
Object_Detection_With_OpenCV/OpenCV_Object_Detection_With_Yolo/: yolo-object-dection.py
Object_Detection_With_OpenCV/OpenCV_Object_Detection_With_Yolo/dnn/: data.txt
OpenCV_With_C++/: Chapter1.cpp  Chapter2.cpp  Chapter3.cpp  Chapter4.cpp  Chapter5.cpp  Chapter6.cpp  Chapter7.cpp  Chapter8.cpp  ColorPicker.cpp  ImageAnnotation.cpp  ImageAnnotationUsingMouse.cpp  ImageClassification_DenseNET_121.cpp  ImageTrackBar.cpp  LicensePlateDetector.cpp  ObjectDetection_With_DNN.cpp  Project1.cpp  Project2.cpp
OpenCV_with_C++/: CMakeLists.txt  main.cpp
(+6 files in other folders)
